Fix column format alignment

--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ header .branding {
     border: 4px solid white;
     background-color: black;
     box-shadow: 2px 2px 2px grey;
+
 }
 
 #banner-body .left-content h4{
@@ -77,8 +78,10 @@ nav{
 }
 
 .feature-site{
-    max-width: 50%;
+    width: 100%;
     height: 250px;
+    border: 2px solid white;
+    box-shadow: 2px 2px 2px grey;
 }
 
 .feature h4 , .feature p{
